# Kernel-Flows-for-Irregular-Time-Series

./: Henon.ipynb  Henon_New.ipynb  Kernel_Flows_for_Irregular_Time_Series.ipynb  Lorenz_New.ipynb  README.md  VDP_New.ipynb  kernel_flow.py  kernel_zoo.py  pyproject.toml
Old code/: VDP.py
experiments/: Henon.ipynb  Lorenz.ipynb  VDP.ipynb  comparison_irregular.py  henon.py
numpy_autograd/: Kernel_Flows_for_Irregular_Time_Series.ipynb  kernel_functions_autograd.py  kf_experiment.py  matrix_functions.py
src/: datagen.py  kernel_flow.py  kernel_zoo.py
