[tool.poetry]
name = "kernel_flows"
version = "0.1.0"
description = ""
authors = ["Edward De Brouwer <edward.debrouwer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.9.0"
autograd = "^1.3"
matplotlib = "^3.4.3"
jupyter = "^1.0.0"
ipdb = "^0.13.9"
tqdm = "^4.62.2"
pytorch-lightning = "^1.4.9"
wandb = "^0.12.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
